src/compiletest/tlcell-13.stderr
error[E0277]: `*const ()` cannot be sent between threads safely
   --> src/compiletest/tlcell-13.rs:12:5
    |
12  |       std::thread::spawn(move || {
    |  _____^^^^^^^^^^^^^^^^^^_-
    | |     |
    | |     `*const ()` cannot be sent between threads safely
13  | |         assert_eq!(*owner.ro(&cell), 100);
14  | |     }).join();
    | |_____- within this `[closure@$DIR/src/compiletest/tlcell-13.rs:12:24: 14:6]`
    |
    = help: within `[closure@$DIR/src/compiletest/tlcell-13.rs:12:24: 14:6]`, the trait `Send` is not implemented for `*const ()`
    = note: required because it appears within the type `qcell::tlcell::NotSendOrSync`
    = note: required because it appears within the type `PhantomData<qcell::tlcell::NotSendOrSync>`
    = note: required because it appears within the type `TLCellOwner<Marker>`
    = note: required because it appears within the type `[closure@$DIR/src/compiletest/tlcell-13.rs:12:24: 14:6]`
note: required by a bound in `spawn`
   --> $RUST/std/src/thread/mod.rs
    |
    |     F: Send + 'static,
    |        ^^^^ required by this bound in `spawn`
